# openai-assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  action.yaml  pyproject.toml
.github/workflows/: comment.yaml
call_assistant/: __main__.py  assistant.py  cli.py  repository.py
